<package>
  <name>fanuc</name>
  <version>0.3.1</version>
  <description>ROS-Industrial support for Fanuc manipulators (metapackage).</description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/fanuc</url>
  <url type="bugtracker">https://github.com/ros-industrial/fanuc/issues</url>
  <url type="repository">https://github.com/ros-industrial/fanuc</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>fanuc_assets</run_depend>
  <run_depend>fanuc_driver</run_depend>
  <run_depend>fanuc_lrmate200ic5h_moveit_config</run_depend>
  <run_depend>fanuc_lrmate200ic5l_moveit_config</run_depend>
  <run_depend>fanuc_lrmate200ic_moveit_config</run_depend>
  <run_depend>fanuc_lrmate200ic_moveit_plugins</run_depend>
  <run_depend>fanuc_lrmate200ic_support</run_depend>
  <run_depend>fanuc_m10ia_moveit_config</run_depend>
  <run_depend>fanuc_m10ia_moveit_plugins</run_depend>
  <run_depend>fanuc_m10ia_support</run_depend>
  <run_depend>fanuc_m16ib20_moveit_config</run_depend>
  <run_depend>fanuc_m16ib_moveit_plugins</run_depend>
  <run_depend>fanuc_m16ib_support</run_depend>
  <run_depend>fanuc_m20ia10l_moveit_config</run_depend>
  <run_depend>fanuc_m20ia_moveit_config</run_depend>
  <run_depend>fanuc_m20ia_moveit_plugins</run_depend>
  <run_depend>fanuc_m20ia_support</run_depend>
  <run_depend>fanuc_m430ia2f_moveit_config</run_depend>
  <run_depend>fanuc_m430ia2p_moveit_config</run_depend>
  <run_depend>fanuc_m430ia_moveit_plugins</run_depend>
  <run_depend>fanuc_m430ia_support</run_depend>
  <run_depend>fanuc_resources</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
