<package>
  <name>fanuc_assets</name>
  <version>0.2.0</version>
  <description>
    <p>
      Shared configuration data, 3D models and launch files for Fanuc 
      manipulators.
    </p>
    <p>
      This package contains configuration data, 3D models and launch files 
      that are shared between different Fanuc robot support packages 
      within the ROS Industrial program.

      This package also contains common URDF / XACRO resources used by 
      other Fanuc related packages.
    </p>
  </description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/fanuc_assets</url>
  <url type="bugtracker">https://github.com/ros-industrial/fanuc/issues</url>
  <url type="repository">https://github.com/ros-industrial/fanuc</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <architecture_independent />
    <deprecated>This package has been deprecated in Hydro, and will be removed in Indigo. Please use the 'fanuc_resources' package as a replacement.</deprecated>
  </export>
</package>
