<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>fanuc_cr7ia_support</name>
  <version>0.5.1</version>
  <description>
    <p>
      ROS-Industrial support for the Fanuc CR-7iA (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for Fanuc CR-7iA manipulators. This currently includes the base and
      /L model.
    </p>
    <p><b>Specifications</b>:</p>
    <ul>
      <li>CR-7iA - Normal Range</li>
      <li>CR-7iA/L - Normal Range</li>
    </ul>
    <p>
      Link lengths are based on information in <em>FANUC Robot CR-4iA, CR-7iA,
      CR-7iA/L, CR-14iA/L Mechanical Unit Operator's Manual</em> version
      <em>B-83774EN/04</em>.
      Joint limits and maximum joint velocities are based on the information in
      the system variables of the supported variants (either from FRVCs or real
      controllers).
      All urdfs are based on the default motion and joint velocity limits,
      unless noted otherwise (ie: no support for high speed joints,
      extended / limited motion ranges or other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
    <p>
      <b>Note</b>: collaborative robots make use of special safety systems
      embedded in the OEM controller which continuously monitor the state of
      the robot and adapt limits where and when necessary.
      The joint limits specified in the xacros provided by this package are the
      maximum joint limits as specified by Fanuc. As there is no information
      available on how the collaborative safety system works, we cannot model
      it here and thus it's very likely the joint limits in these files are
      unattainable by the actual robot.
    </p>
  </description>
  <author email="dniewinski@clearpathrobotics.com">Dave Niewinski</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/fanuc_cr7ia_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/fanuc/issues</url>
  <url type="repository">https://github.com/ros-industrial/fanuc</url>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

  <exec_depend>fanuc_driver</exec_depend>
  <exec_depend>fanuc_resources</exec_depend>
  <exec_depend>industrial_robot_client</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent />
    <rosindex>
      <tags>
        <tag>cr7ia</tag>
        <tag>description</tag>
        <tag>fanuc</tag>
        <tag>industrial</tag>
        <tag>ros-industrial</tag>
        <tag>support_package</tag>
      </tags>
    </rosindex>
    <ros_industrial>
      <support_level value="community" />
    </ros_industrial>
  </export>
</package>
