<package>
  <name>fanuc_lrmate200ic_support</name>
  <version>0.3.2</version>
  <description>
    <p>
      ROS-Industrial support for the Fanuc LR Mate 200iC (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for Fanuc LR Mate 200iC manipulators. This includes the base model
      (/5C, /5WP), /5H, /5L (/5LC), /5F and the /5HS. Variants in brackets
      are supported by the files for the referenced model.
    </p>
    <p><b>Specifications</b>:</p>
    <ul>
      <li>LR Mate 200iC    - "J1 - Normal Range"</li>
      <li>LR Mate 200iC/5H - "J1 - Normal Range"</li>
      <li>LR Mate 200iC/5L - "J1 - Normal Range"</li>
      <li>LR Mate 200iC/5F - "J1 - Normal Range"</li>
    </ul>
    <p>
      Joint limits and maximum joint velocities are based on the information in
      the <em>FANUC Robot LR Mate 200iC Mechanical Unit Operator's Manual</em>
      version <em>B-82584EN/07</em>. All urdfs are based on the default motion
      and joint velocity limits, unless noted otherwise (ie: no support for
      high speed joints, extended / limited motion ranges or other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/fanuc_lrmate200ic_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/fanuc/issues</url>
  <url type="repository">https://github.com/ros-industrial/fanuc</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend version_gte="1.9.55">roslaunch</build_depend>

  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>fanuc_resources</run_depend>
  <run_depend>fanuc_driver</run_depend>

  <export>
    <architecture_independent />
  </export>
</package>
